fixed a layout bug

--- a/dev/styles/layout/_content.scss
+++ b/dev/styles/layout/_content.scss
@@ -16,7 +16,7 @@
 .hero-container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 2fr 2fr 2fr;
+    grid-template-rows: 1fr 1fr 1fr;
     justify-content: space-between;
     margin-top: clamp(2.5rem, 2vw + .5rem, 5rem);
     @media (min-width: 600px) {
@@ -68,13 +68,14 @@
     }
 }
 
-.heartbeat__container::before {
+.heartbeat__container::after {
     display: block;
     content: "";
     position: absolute;
     width: 100%;
     background-color: map-get($color-map, "blue" );
     height: 100%;
-    animation: pulse 7s infinite;
-    justify-self: right;
+    animation: pulse-inverse 7s infinite;
+    justify-self: left;
+
 }
